--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,43 @@ splits/endovis/curve
 splits/endovis/*.npz
 decompose_ckpt/*
 decompose_ckpt/
+checkpoints/*
+logs/*
+demo01.jpg
+
+# Python cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
